manager send message
